# fk-royale-backend

./: .gitignore  .isort.cfg  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
config/: settings.py
source/: __init__.py  __main__.py
source/blueprints/auth/: routes.py  services.py
source/blueprints/game_stats/: routes.py  services.py
source/blueprints/index/: routes.py
source/blueprints/profile/: routes.py  services.py
source/blueprints/report/: routes.py  services.py
source/blueprints/user/: routes.py  services.py
source/blueprints/xp_event_type/: routes.py
source/commands/: seeders.py
source/constants/: blueprints.py  socketio.py  tables.py
source/database/: instance.py
source/database/migrations/: env.py
source/database/seeders/: xp_event_type.py
source/dtos/: auth.py  game_stats.py  profile.py  report.py  revoked_token.py  socketio.py  user.py  xp_event_type.py
source/errors/: client.py  json_error.py  server.py
source/jwt/: instance.py  jwt_causes.py
source/lib/: responses.py
source/models/: __init__.py  columns.py
source/models/game/: game.py
source/models/game_room/: game_room.py
source/models/game_stats/: game_stats.py
source/models/player/: player.py
source/models/profile/: __init__.py  profile.py
source/models/report/: report.py
source/models/revoked_token/: revoked_token.py
source/models/room/: room.py
source/models/user/: user.py
source/models/xp_event_type/: xp_event_type.py
source/socketio/: game.py  instance.py
source/socketio/events/: index.py  (+1 more)
(+7 files in other folders)
