[tool.poetry]
name = "fk-royale-backend"
version = "0.1.0"
description = ""
authors = ["guilherme_urbanas <guilherme.urbanas@ocumetra.com>"]
readme = "README.md"
packages = [{include = "fk_royale_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.1"
flask-sqlalchemy = "^3.0.2"
alembic = "^1.9.2"
flask-jwt-extended = "^4.4.4"
bcrypt = "^4.0.1"
marshmallow = "^3.19.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
flake8 = "^6.0.0"
isort = "^5.11.4"
djlint = "^1.19.13"
autoflake = "^2.0.0"
docformatter = "^1.5.1"
pydocstyle = "^6.3.0"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = 100

[flake8]
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"